--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,5 +8,33 @@
     tools:context=".MainActivity">
 
 
+    <TextView
+        android:id="@+id/logo1"
+        android:layout_width="180dp"
+        android:layout_height="69dp"
+        android:fontFamily="@font/inria_serif"
+        android:text="CLAIM"
+        android:textSize="60sp"
+        tools:layout_editor_absoluteX="25dp"
+        tools:layout_editor_absoluteY="16dp" />
 
+    <TextView
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/jost"
+        android:text="login"
+        android:textSize="40sp"
+        tools:layout_editor_absoluteX="25dp"
+        tools:layout_editor_absoluteY="373dp" />
+
+    <TextView
+        android:id="@+id/logo2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/jost"
+        android:text="nomore"
+        android:textSize="30sp"
+        tools:layout_editor_absoluteX="205dp"
+        tools:layout_editor_absoluteY="41dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
