--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -18,34 +18,34 @@
         tools:layout_editor_absoluteY="16dp" />
 
     <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+        android:id="@+id/notafiscal2"
+        android:layout_width="359dp"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Nota Fiscal"
         tools:layout_editor_absoluteX="33dp"
         tools:layout_editor_absoluteY="83dp" />
 
     <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
+        android:id="@+id/dentistasparceiros"
+        android:layout_width="359dp"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Dentistas Parceiros"
         tools:layout_editor_absoluteX="33dp"
         tools:layout_editor_absoluteY="255dp" />
 
     <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:id="@+id/falsosinistro"
+        android:layout_width="359dp"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Falso Sinistro"
         tools:layout_editor_absoluteX="33dp"
         tools:layout_editor_absoluteY="200dp" />
 
     <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
+        android:id="@+id/sinistro"
+        android:layout_width="359dp"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="Sinistro"
         tools:layout_editor_absoluteX="33dp"
         tools:layout_editor_absoluteY="145dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
