--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,6 @@
     tools:context=".MainActivity">
 
 
-
     <TextView
         android:id="@+id/logo2"
         android:layout_width="wrap_content"
@@ -31,25 +30,27 @@
 
     <EditText
         android:id="@+id/usuario"
-        android:hint="Usuário"
-        android:textSize="20sp"
-        android:fontFamily="@font/jost"
         android:layout_width="341dp"
         android:layout_height="41dp"
         android:background="@drawable/rounded_conner"
-        android:inputType="text"/>
+        android:fontFamily="@font/jost"
+        android:hint="Usuário"
+        android:inputType="text"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="33dp"
+        tools:layout_editor_absoluteY="417dp" />
 
     <EditText
         android:id="@+id/senha"
         android:layout_width="341dp"
         android:layout_height="41dp"
-        android:hint="Senha"
         android:background="@drawable/rounded_conner"
         android:fontFamily="@font/jost"
+        android:hint="Senha"
         android:inputType="text"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="54dp"
-        tools:layout_editor_absoluteY="365dp" />
+        tools:layout_editor_absoluteX="33dp"
+        tools:layout_editor_absoluteY="491dp" />
 
     <TextView
         android:id="@+id/login"
@@ -76,7 +77,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/jost"
         android:text="entrar (dentista)"
-        tools:layout_editor_absoluteX="168dp"
-        tools:layout_editor_absoluteY="559dp" />
+        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteY="625dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
