--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,20 +37,8 @@
         android:hint="Usuário"
         android:inputType="text"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="417dp" />
-
-    <EditText
-        android:id="@+id/senha"
-        android:layout_width="341dp"
-        android:layout_height="41dp"
-        android:background="@drawable/rounded_conner"
-        android:fontFamily="@font/jost"
-        android:hint="Senha"
-        android:inputType="text"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="491dp" />
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="398dp" />
 
     <TextView
         android:id="@+id/login"
@@ -59,17 +47,8 @@
         android:fontFamily="@font/jost"
         android:text="login"
         android:textSize="40sp"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="319dp" />
-
-    <Button
-        android:id="@+id/entrarfuncionario"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/jost"
-        android:text="entrar (funcionario)"
-        tools:layout_editor_absoluteX="168dp"
-        tools:layout_editor_absoluteY="559dp" />
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="300dp" />
 
     <Button
         android:id="@+id/entrardentista"
@@ -77,7 +56,28 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/jost"
         android:text="entrar (dentista)"
-        tools:layout_editor_absoluteX="147dp"
-        tools:layout_editor_absoluteY="625dp" />
+        tools:layout_editor_absoluteX="136dp"
+        tools:layout_editor_absoluteY="609dp" />
+
+    <Button
+        android:id="@+id/entrarfuncionario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/jost"
+        android:text="entrar (funcionario)"
+        tools:layout_editor_absoluteX="125dp"
+        tools:layout_editor_absoluteY="540dp" />
+
+    <EditText
+        android:id="@+id/senha"
+        android:layout_width="341dp"
+        android:layout_height="41dp"
+        android:background="@drawable/rounded_conner"
+        android:fontFamily="@font/jost"
+        android:hint="Senha"
+        android:inputType="textPassword"
+        android:textSize="20sp"
+        tools:layout_editor_absoluteX="35dp"
+        tools:layout_editor_absoluteY="472dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
