--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,13 +60,13 @@
         tools:layout_editor_absoluteY="609dp" />
 
     <Button
-        android:id="@+id/entrarfuncionario"
+        android:id="@+id/entrarFuncionarioBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/jost"
         android:text="entrar (funcionario)"
-        tools:layout_editor_absoluteX="125dp"
-        tools:layout_editor_absoluteY="540dp" />
+        tools:layout_editor_absoluteX="149dp"
+        tools:layout_editor_absoluteY="553dp" />
 
     <EditText
         android:id="@+id/senha"
