--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         tools:layout_editor_absoluteY="300dp" />
 
     <Button
-        android:id="@+id/entrardentista"
+        android:id="@+id/entrarDentistaBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/jost"
