--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -11,43 +11,54 @@
         android:id="@+id/dentistasparceiros"
         android:layout_width="359dp"
         android:layout_height="46dp"
+        android:layout_marginTop="352dp"
         android:text="Dentistas Parceiros"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="328dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/sinistro"
         android:layout_width="359dp"
         android:layout_height="46dp"
+        android:layout_marginTop="272dp"
         android:text="Sinistro"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="183dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/notafiscal2"
         android:layout_width="359dp"
         android:layout_height="46dp"
+        android:layout_marginTop="112dp"
         android:text="Nota Fiscal"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="106dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/falsosinistro"
         android:layout_width="359dp"
         android:layout_height="46dp"
+        android:layout_marginTop="196dp"
         android:text="Falso Sinistro"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="257dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/funcionario"
         android:layout_width="192dp"
         android:layout_height="49dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/jost"
         android:text="Funcionário"
         android:textSize="36sp"
-        tools:layout_editor_absoluteX="33dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.118"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
