--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -7,4 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".Agenda">
 
+    <TextView
+        android:id="@+id/agenda"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/jost"
+        android:text="Agenda"
+        android:textSize="36sp"
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="51dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
