--- a/app/src/main/res/layout/activity_nota_fiscal.xml
+++ b/app/src/main/res/layout/activity_nota_fiscal.xml
@@ -7,4 +7,15 @@
     android:layout_height="match_parent"
     tools:context=".NotaFiscal">
 
+    <TextView
+        android:id="@+id/notafiscaltexto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/jost"
+        android:text="Nota Fiscal"
+        android:textSize="36sp"
+        tools:layout_editor_absoluteX="41dp"
+        tools:layout_editor_absoluteY="54dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
