--- a/app/src/main/res/layout/activity_nota_fiscal.xml
+++ b/app/src/main/res/layout/activity_nota_fiscal.xml
@@ -11,11 +11,23 @@
         android:id="@+id/notafiscaltexto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/jost"
         android:text="Nota Fiscal"
         android:textSize="36sp"
-        tools:layout_editor_absoluteX="41dp"
-        tools:layout_editor_absoluteY="54dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/camerafoto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="88dp"
+        android:src="@drawable/camera_photo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
