retirada de texto hardcoded

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:fontFamily="@font/jost"
-        android:text="nomore"
+        android:text="@string/nomore_logo"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.686"
@@ -27,7 +27,7 @@
         android:layout_height="69dp"
         android:layout_marginTop="44dp"
         android:fontFamily="@font/inria_serif"
-        android:text="CLAIM"
+        android:text="@string/claim_logo"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.151"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="336dp"
         android:fontFamily="@font/jost"
-        android:text="login"
+        android:text="@string/login_button_text"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.107"
