--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,10 +5,51 @@
     android:layout_height="match_parent"
     tools:context=".SignUpFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <EditText
+        android:id="@+id/nome"
+        android:layout_width="341dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="412dp"
+        android:background="@drawable/rounded_conner"
+        android:fontFamily="@font/jost"
+        android:hint="@string/nome_text"
+        android:inputType="text"
+        android:textSize="20sp"/>
 
+
+
+    <EditText
+        android:id="@+id/funcao"
+        android:layout_width="341dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="412dp"
+        android:background="@drawable/rounded_conner"
+        android:fontFamily="@font/jost"
+        android:hint="@string/funcao_text"
+        android:inputType="text"
+        android:textSize="20sp"/>
+
+
+    <EditText
+        android:id="@+id/cpf"
+        android:layout_width="341dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="412dp"
+        android:background="@drawable/rounded_conner"
+        android:fontFamily="@font/jost"
+        android:hint="@string/cpf_text"
+        android:inputType="text"
+        android:textSize="20sp"/>
+
+
+    <EditText
+        android:id="@+id/numero"
+        android:layout_width="341dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="412dp"
+        android:background="@drawable/rounded_conner"
+        android:fontFamily="@font/jost"
+        android:hint="@string/numero_text"
+        android:inputType="text"
+        android:textSize="20sp" />
 </FrameLayout>
