--- a/app/src/main/res/layout/fragment_nota_fiscal.xml
+++ b/app/src/main/res/layout/fragment_nota_fiscal.xml
@@ -5,4 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".NotaFiscalFragment">
 
+    <Button
+        android:id="@+id/notafiscal_pagina_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/notafiscal_button_text"/>
+
 </FrameLayout>
