--- a/app/src/main/res/layout/fragment_nota_fiscal.xml
+++ b/app/src/main/res/layout/fragment_nota_fiscal.xml
@@ -10,5 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/notafiscal_button_text"/>
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/camera_photo" />
+        />
 </FrameLayout>
